# kronicler

./: .gitignore  Cargo.toml  Database.md  Makefile  README.md  concurrent_test.py  many_test.py  names.md  pyproject.toml  simple_test.py
.github/workflows/: CI.yml  rust.yml
dashboard/: .gitignore  README.md  index.html  package.json
dashboard/public/: robots.txt  sitemap.xml
dashboard/src/: About.tsx  App.tsx  Dashboard.tsx  main.tsx  types.ts
dashboard/src/components/: AverageResponseTimesChart.tsx  DashboardHeader.tsx  DetailedStatisticsTable.tsx  PercentileAnalysisChart.tsx  PerformanceTrendsChart.tsx  SettingsModal.tsx  StatsCards.tsx  SystemHealthOverview.tsx  TopNav.tsx
fastapi-test/: main.py
python/kronicler/: __init__.py
python/logfrog/: __init__.py
python/tests/: conftest.py  test_init.py  test_middleware.py
src/: bufferpool.rs  capture.rs  column.rs  constants.rs  database.rs  filewriter.rs  index.rs  lib.rs  main.rs  page.rs  queue.rs  row.rs  value.rs
tests/: concurrent_test.py  index_test.py  many_test.py  time_test.py
tests/fastapi-test/: main.py
tests/kronicler-sqlite-comparison/: Makefile  README.md  pyproject.toml
tests/kronicler-sqlite-comparison/kronicler_sqlite/: __init__.py
tests/new-data-format/: new-logs.json  old-logs.json  results.md
tests/python-integration-tests/: concurrent_test.py  index_test.py  large_average.py  large_average_no_in_mem_comp.py  many_test.py  run_large_avg.sh  simple_sync_test.py  simple_test.py  small_average.py  too_many_concurrent_test.py  too_many_test.py
(+24 files in other folders)
