[package]
name = "kronicler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kronicler"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "kr"
path = "src/bin/main.rs"

[dependencies]
pyo3 = "0.25.0"
env_logger = "0.11.6"
log = "0.4.26"
once_cell = "1.21.3"
